--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <button onclick="downloadProject()">Download Project</button>
   <button onclick="saveToLocal()">Save Locally</button>
   <button onclick="toggleAI()">Toggle AI Mode (Online / Offline)</button>
+  <button onclick="analyzeCodeComplexity()">Analyze Code Complexity</button>
+  <button onclick="generateDocumentation()">Generate Documentation</button>
+  <button onclick="formatCode()">Format Code</button>
+  <button onclick="generateUnitTests()">Generate Unit Tests</button>
+  <button onclick="addCodeComments()">Add Comments</button>
 
   <pre id="output"></pre>
 
