--- a/index.html
+++ b/index.html
@@ -2,30 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web4 AI Project Assistant</title>
   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Web4 AI Project Assistant</h1>
-
-  <input type="file" id="fileInput" multiple><br><br>
-  <button onclick="loadFromLocalStorage()">Load from LocalStorage</button>
-  <button onclick="runAIRefactor()">AI Refactor + Organize</button>
-  <button onclick="downloadProject()">Download Project</button>
-  <button onclick="saveToLocal()">Save Locally</button>
-  <button onclick="toggleAI()">Toggle AI Mode (Online / Offline)</button>
-  <button onclick="analyzeCodeComplexity()">Analyze Code Complexity</button>
-  <button onclick="generateDocumentation()">Generate Documentation</button>
-  <button onclick="formatCode()">Format Code</button>
-  <button onclick="generateUnitTests()">Generate Unit Tests</button>
-  <button onclick="addCodeComments()">Add Comments</button>
-
-  <pre id="output"></pre>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://unpkg.com/localforage/dist/localforage.min.js"></script>
   <script src="https://mlc.ai/web-llm/dist/index.js"></script>
+</head>
+<body>
+
+  <h1>Web4 AI Project Assistant</h1>
+
+  <input type="file" id="fileInput" multiple />
+  <button onclick="loadFiles()">Load Files</button>
+  <button onclick="runAIRefactor()">Run AI Refactor</button>
+  <button onclick="saveToLocal()">Save to Local Storage</button>
+  <button onclick="loadFromLocal()">Load from Local Storage</button>
+  <button onclick="downloadAll()">Download Project</button>
+
+  <hr>
+
+  <h2>AI Options</h2>
+  <label><input type="checkbox" id="toggleOnlineAI" checked> Use Online GPT-4</label>
+  <button onclick="runAnalysis()">Analyze Code</button>
+  <button onclick="runDocGen()">Generate Documentation</button>
+  <button onclick="runFormat()">Format Code</button>
+  <button onclick="runUnitTests()">Generate Unit Tests</button>
+  <button onclick="runCommenting()">Add Code Comments</button>
+
+  <hr>
+
+  <div id="output"></div>
+
   <script src="assistant.js"></script>
 </body>
 </html>
