--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
   </section>
 
   <hr>
-
   <!-- Output Section -->
   <section id="outputSection">
     <div id="output"></div>
   </section>
 
-  <script src="assistant.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
