--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     <div id="output"></div>
   </section>
 
-  <script src="script.js"></script>
+  <script src="assistance.js"></script>
 </body>
 </html>
