--- a/Public/refactor.html
+++ b/Public/refactor.html
@@ -2,96 +2,194 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AI Refactor</title>
+  <title>AI Refactor - Web4 AI</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; }
-    button { margin: 0.5rem; padding: 0.6rem 1.2rem; font-weight: bold; cursor: pointer; }
-    #taskStatus { margin-bottom: 1rem; font-weight: bold; }
-    textarea { width: 100%; max-width: 700px; font-family: monospace; font-size: 14px; }
+    body {
+      background-color: #36393f;
+      color: #dcddde;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0; padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
+      font-weight: 700;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      user-select: none;
+    }
+    textarea {
+      width: 100%;
+      height: 250px;
+      background-color: #2f3136;
+      border: none;
+      border-radius: 8px;
+      color: #dcddde;
+      padding: 1rem;
+      font-family: monospace;
+      font-size: 1rem;
+      resize: vertical;
+      margin-bottom: 1rem;
+    }
+    #taskStatus {
+      margin-bottom: 1rem;
+      font-weight: 600;
+      min-height: 24px;
+    }
+    button {
+      background-color: #5865f2;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+      padding: 10px 20px;
+      margin-right: 10px;
+      user-select: none;
+      transition: background-color 0.2s ease;
+    }
+    button:hover {
+      background-color: #4752c4;
+    }
+    #modelSelector {
+      background-color: #2f3136;
+      border: none;
+      color: #dcddde;
+      padding: 8px;
+      border-radius: 6px;
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+      width: 100%;
+      max-width: 300px;
+      cursor: pointer;
+      user-select: none;
+    }
+    nav a {
+      color: #dcddde;
+      text-decoration: none;
+      font-weight: 600;
+      margin-right: 1rem;
+      user-select: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
   </style>
   <script src="https://mlc.ai/web-llm/dist/index.js"></script>
 </head>
 <body>
 
-<h1>AI Refactor</h1>
-<div id="taskStatus">Waiting to run refactor...</div>
-<textarea id="inputCode" rows="10" placeholder="Paste your code here to refactor..."></textarea><br>
+  <header>AI Refactor</header>
+  
+  <nav>
+    <a href="index.html">← Back to Home</a>
+  </nav>
+  
+  <label for="modelSelector">Select AI Model</label>
+  <select id="modelSelector">
+    <option value="llama2-7b-chat.ggmlv3.q4_0.bin">LLaMA 2 7B Chat</option>
+    <option value="gpt4all-lora.bin">GPT4All LoRA</option>
+    <option value="wizard-vicuna-13b.bin">Wizard Vicuna 13B</option>
+    <option value="ggml-alpaca-7b-q4.bin">Alpaca 7B Q4</option>
+  </select>
 
-<button onclick="runRefactor()">Run Refactor</button>
-<button onclick="saveResult()">Save</button>
-<button onclick="redo()">Redo</button>
-<button onclick="goBack()">Back</button>
+  <div id="taskStatus">Waiting to run refactor...</div>
+  <textarea id="inputCode" placeholder="Paste your code here to refactor..."></textarea>
 
-<script>
-  let model, lastResult = '';
+  <div>
+    <button onclick="runRefactor()">Run Refactor</button>
+    <button onclick="saveResult()">Save Result</button>
+    <button onclick="redo()">Redo</button>
+  </div>
 
-  async function loadModel() {
-    document.getElementById('taskStatus').textContent = 'Loading model...';
-    model = await mlc.llm.load({
-      model: "llama2-7b-chat.ggmlv3.q4_0.bin",
-      verbose: true
+  <script>
+    let model, lastResult = '';
+
+    const modelSelector = document.getElementById('modelSelector');
+
+    // Load saved model or default
+    modelSelector.value = localStorage.getItem('selectedModel') || modelSelector.value;
+
+    modelSelector.addEventListener('change', () => {
+      localStorage.setItem('selectedModel', modelSelector.value);
+      alert(`AI Model set to: ${modelSelector.options[modelSelector.selectedIndex].text}`);
+      // Reload model if already loaded
+      if (model) {
+        loadModel();
+      }
     });
-    document.getElementById('taskStatus').textContent = 'Model loaded! Ready to refactor.';
-  }
 
-  async function runRefactor() {
-    const code = document.getElementById('inputCode').value.trim();
-    if (!code) {
-      alert('Please enter some code to refactor.');
-      return;
-    }
-    if (!model) {
-      alert('Model not loaded yet. Loading now...');
-      await loadModel();
-    }
-
-    document.getElementById('taskStatus').textContent = 'Refactoring in progress...';
-
-    const prompt = `Refactor this code for readability and efficiency:\n\n${code}\n\nRefactored code:`;
-
-    try {
-      const output = await model.generate(prompt, {
-        max_new_tokens: 200,
-        temperature: 0.7
+    async function loadModel() {
+      document.getElementById('taskStatus').textContent = 'Loading model...';
+      model = await mlc.llm.load({
+        model: modelSelector.value,
+        verbose: true
       });
+      document.getElementById('taskStatus').textContent = 'Model loaded! Ready to refactor.';
+    }
 
-      lastResult = output.text.trim();
-      document.getElementById('taskStatus').textContent = 'Refactor complete! Review changes below.';
+    async function runRefactor() {
+      const code = document.getElementById('inputCode').value.trim();
+      if (!code) {
+        alert('Please enter some code to refactor.');
+        return;
+      }
+      if (!model) {
+        alert('Model not loaded yet. Loading now...');
+        await loadModel();
+      }
+
+      document.getElementById('taskStatus').textContent = 'Refactoring in progress...';
+
+      const prompt = `Refactor this code for readability and efficiency:\n\n${code}\n\nRefactored code:`;
+
+      try {
+        const output = await model.generate(prompt, {
+          max_new_tokens: 300,
+          temperature: 0.7
+        });
+        lastResult = output.text.trim();
+        document.getElementById('taskStatus').textContent = 'Refactor complete! Review changes below.';
+        document.getElementById('inputCode').value = lastResult;
+      } catch (err) {
+        document.getElementById('taskStatus').textContent = 'Refactor failed.';
+        console.error(err);
+      }
+    }
+
+    function saveResult() {
+      if (!lastResult) {
+        alert('No refactor results to save yet.');
+        return;
+      }
+      const blob = new Blob([lastResult], { type: 'text/plain' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = `refactor_result_${Date.now()}.txt`;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      URL.revokeObjectURL(url);
+      alert('Refactor result saved as text file.');
+    }
+
+    function redo() {
+      if (!lastResult) {
+        alert('No previous refactor to redo. Run refactor first.');
+        return;
+      }
       document.getElementById('inputCode').value = lastResult;
-    } catch (error) {
-      document.getElementById('taskStatus').textContent = 'Error during refactor.';
-      console.error(error);
+      runRefactor();
     }
-  }
 
-  function saveResult() {
-    if (!lastResult) {
-      alert('No refactor results to save yet.');
-      return;
-    }
-    const key = `refactor_${Date.now()}`;
-    localStorage.setItem(key, lastResult);
-    alert(`Saved refactor result as "${key}".`);
-  }
-
-  function redo() {
-    if (!lastResult) {
-      alert('No previous refactor to redo. Run refactor first.');
-      return;
-    }
-    document.getElementById('inputCode').value = lastResult;
-    runRefactor();
-  }
-
-  function goBack() {
-    window.location.href = 'index.html';
-  }
-
-  loadModel().catch(err => {
-    document.getElementById('taskStatus').textContent = 'Failed to load model.';
-    console.error(err);
-  });
-</script>
+    // Auto-load model on page load
+    loadModel().catch(err => {
+      document.getElementById('taskStatus').textContent = 'Failed to load model.';
+      console.error(err);
+    });
+  </script>
 
 </body>
 </html>
