--- a/Public/Index.html
+++ b/Public/Index.html
@@ -1,5 +1,3 @@
-<!-- public/index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,37 +7,33 @@
     body {
       background-color: #36393f;
       color: #dcddde;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0; padding: 2rem;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 20px;
       display: flex;
       flex-direction: column;
+      align-items: center;
       min-height: 100vh;
-      user-select: none;
     }
     header {
-      font-weight: 700;
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
+      font-size: 2.5rem;
+      margin-bottom: 40px;
+      font-weight: bold;
     }
-    .button-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-    }
-    a.button {
+    button {
       background-color: #5865f2;
-      color: white;
-      padding: 12px 24px;
+      border: none;
       border-radius: 8px;
-      font-weight: 600;
-      text-decoration: none;
+      color: white;
+      padding: 15px 30px;
+      font-weight: bold;
       cursor: pointer;
+      margin: 10px;
+      font-size: 1.2rem;
+      width: 250px;
       transition: background-color 0.2s ease;
-      flex: 1 1 160px;
-      text-align: center;
-      user-select: none;
     }
-    a.button:hover {
+    button:hover {
       background-color: #4752c4;
     }
   </style>
@@ -48,17 +42,11 @@
 
 <header>Web4 AI Project Assistant</header>
 
-<section>
-  <h2>AI Options</h2>
-  <div class="button-container">
-    <a href="refactor.html" class="button">Run AI Refactor</a>
-    <a href="analyze.html" class="button">Analyze Code</a>
-    <a href="docgen.html" class="button">Generate Documentation</a>
-    <a href="format.html" class="button">Format Code</a>
-    <a href="unittests.html" class="button">Generate Unit Tests</a>
-    <a href="commenting.html" class="button">Add Code Comments</a>
-  </div>
-</section>
+<button onclick="location.href='analyze.html'">Analyze Code</button>
+<button onclick="location.href='docgen.html'">Generate Documentation</button>
+<button onclick="location.href='format.html'">Format Code</button>
+<button onclick="location.href='unittests.html'">Generate Unit Tests</button>
+<button onclick="location.href='commenting.html'">Add Comments</button>
 
 </body>
 </html>
