--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
       alert(`AI Model set to: ${modelSelector.options[modelSelector.selectedIndex].text}`);
     });
   </script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/jszip"></script>
+  <script src="https://cdn.jsdelivr.net/npm/localforage"></script>
+  <script src="path/to/webllm.js"></script>
 </body>
 </html>
