--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <title>Web4 AI Project Assistant</title>
   <style>
-    /* Discord-style theme */
     body {
       background-color: #36393f;
       color: #dcddde;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
       display: flex;
       height: 100vh;
       overflow: hidden;
@@ -20,14 +20,12 @@
       display: flex;
       flex-direction: column;
       padding: 1rem;
-      box-sizing: border-box;
     }
     #sidebar h2 {
-      margin: 0 0 1rem 0;
+      color: #ffffff;
       font-weight: 700;
       font-size: 1.2rem;
-      color: #ffffff;
-      user-select: none;
+      margin-bottom: 1rem;
     }
     .button {
       background-color: #5865f2;
@@ -39,9 +37,7 @@
       cursor: pointer;
       text-align: center;
       text-decoration: none;
-      user-select: none;
       transition: background-color 0.2s ease;
-      display: block;
     }
     .button:hover {
       background-color: #4752c4;
@@ -50,15 +46,14 @@
       flex-grow: 1;
       background-color: #40444b;
       padding: 2rem;
-      box-sizing: border-box;
       overflow-y: auto;
     }
-    #fileInput {
-      display: block;
-      margin-bottom: 1rem;
-      color: #dcddde;
+    #fileList, #analysisOutput {
+      background: #2f3136;
+      padding: 10px;
+      border-radius: 8px;
     }
-    #modelSelector {
+    #searchBox, #modelSelector {
       margin-top: 1rem;
       background-color: #2f3136;
       border: none;
@@ -67,18 +62,22 @@
       border-radius: 6px;
       font-size: 1rem;
       width: 100%;
-      box-sizing: border-box;
-      cursor: pointer;
     }
-    label {
-      display: block;
-      margin-bottom: 0.3rem;
-      user-select: none;
+    #dropZone {
+      margin-top: 1rem;
+      background-color: #2f3136;
+      border: 2px dashed #5865f2;
+      border-radius: 8px;
+      padding: 20px;
+      text-align: center;
+    }
+    pre {
+      white-space: pre-wrap;
+      font-size: 0.95rem;
     }
   </style>
 </head>
 <body>
-
   <nav id="sidebar">
     <h2>Web4 AI Tools</h2>
     <a href="refactor.html" class="button">AI Refactor</a>
@@ -87,7 +86,7 @@
     <a href="format.html" class="button">Format Code</a>
     <a href="unittests.html" class="button">Generate Unit Tests</a>
     <a href="commenting.html" class="button">Add Comments</a>
-    
+
     <label for="modelSelector">Select AI Model</label>
     <select id="modelSelector">
       <option value="llama2-7b-chat.ggmlv3.q4_0.bin">LLaMA 2 7B Chat</option>
@@ -95,17 +94,33 @@
       <option value="wizard-vicuna-13b.bin">Wizard Vicuna 13B</option>
       <option value="ggml-alpaca-7b-q4.bin">Alpaca 7B Q4</option>
     </select>
+    <input type="text" id="searchBox" placeholder="🔍 Search files..." />
+    <button class="button" onclick="toggleSidebar()">Toggle Sidebar</button>
+    <label><input type="checkbox" id="themeToggle" /> Dark Mode</label>
   </nav>
 
   <main id="mainContent">
     <h1>Welcome to Web4 AI Project Assistant</h1>
-    <p>Load your files below. Then navigate to any AI tool from the left sidebar.</p>
-
+    <p>Load your files below or drag them into the zone. Then navigate to a tool!</p>
     <input type="file" id="fileInput" multiple webkitdirectory directory />
-    <button class="button" onclick="loadFiles()">Load Files</button>
-
+    <button class="button" onclick="loadFiles()">📂 Load Files</button>
+    <div id="dropZone"><strong>Drop files here</strong></div>
     <h3>Loaded Files:</h3>
-    <ul id="fileList" style="max-height: 300px; overflow-y: auto; background: #2f3136; padding: 10px; border-radius: 8px;"></ul>
+    <ul id="fileList" style="max-height: 300px; overflow-y: auto;"></ul>
+
+    <button class="button" onclick="startVoiceCommand()">🎙️ Voice Command</button>
+    <button class="button" onclick="generateCommitMessage()">📝 Generate Commit Message</button>
+    <p id="commitMsg"></p>
+
+    <div id="aiOutput">
+      <h3>AI Output Preview</h3>
+      <pre id="outputText"></pre>
+    </div>
+
+    <div id="analysisPanel">
+      <h3>AI Code Analysis</h3>
+      <pre id="analysisOutput"></pre>
+    </div>
   </main>
 
   <script>
@@ -115,28 +130,94 @@
 
     function loadFiles() {
       loadedFiles = Array.from(fileInput.files);
-      fileList.innerHTML = '';
-      if (loadedFiles.length === 0) {
-        fileList.innerHTML = '<li>No files loaded.</li>';
-        return;
-      }
-      loadedFiles.forEach(file => {
-        const li = document.createElement('li');
-        li.textContent = file.webkitRelativePath || file.name;
-        fileList.appendChild(li);
-      });
+      updateFileList();
       alert(`${loadedFiles.length} files loaded successfully!`);
     }
 
-    // Save the selected model globally for other pages via localStorage
+    function updateFileList(filter = '') {
+      fileList.innerHTML = '';
+      const matches = loadedFiles.filter(file => file.name.toLowerCase().includes(filter.toLowerCase()));
+      matches.forEach(file => {
+        const li = document.createElement('li');
+        li.textContent = file.name;
+        fileList.appendChild(li);
+      });
+      if (matches.length === 0) {
+        fileList.innerHTML = '<li>No match found.</li>';
+      }
+    }
+
+    const dropZone = document.getElementById('dropZone');
+    dropZone.addEventListener('dragover', e => e.preventDefault());
+    dropZone.addEventListener('drop', e => {
+      e.preventDefault();
+      const droppedFiles = Array.from(e.dataTransfer.files);
+      loadedFiles.push(...droppedFiles);
+      updateFileList();
+      alert(`${droppedFiles.length} files added via drag-and-drop!`);
+    });
+
+    document.getElementById('searchBox').addEventListener('input', e => {
+      updateFileList(e.target.value);
+    });
+
     const modelSelector = document.getElementById('modelSelector');
     modelSelector.value = localStorage.getItem('selectedModel') || modelSelector.value;
-
     modelSelector.addEventListener('change', () => {
       localStorage.setItem('selectedModel', modelSelector.value);
       alert(`AI Model set to: ${modelSelector.options[modelSelector.selectedIndex].text}`);
     });
+
+    function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.style.display = sidebar.style.display === 'none' ? 'flex' : 'none';
+    }
+
+    document.getElementById('themeToggle').addEventListener('change', e => {
+      document.body.style.backgroundColor = e.target.checked ? '#36393f' : '#f4f4f4';
+      document.body.style.color = e.target.checked ? '#dcddde' : '#333';
+    });
+
+    function startVoiceCommand() {
+      const recognition = new(window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = 'en-US';
+      recognition.onresult = event => {
+        const command = event.results[0][0].transcript.toLowerCase();
+        alert(`You said: ${command}`);
+        if (command.includes("generate docs")) window.location.href = "docgen.html";
+        else if (command.includes("add comments")) window.location.href = "commenting.html";
+      };
+      recognition.start();
+    }
+
+    function generateCommitMessage() {
+      const simulatedChange = "Added AI-generated comments to utils.js";
+      const messages = [
+        `chore: ${simulatedChange}`,
+        `feat: Enhance utils.js with smart annotations`,
+        `docs: Auto-commented functions in utils.js`
+      ];
+      document.getElementById('commitMsg').textContent = messages[Math.floor(Math.random() * messages.length)];
+    }
+
+    function simulateAIResponse() {
+      const sampleText = `/**\n * Calculates factorial.\n * @param {number} n - Input\n */`;
+      document.getElementById('outputText').textContent = sampleText;
+    }
+
+    function runAnalysis() {
+      const feedback = [
+        'Line 23: Use === instead of ==',
+        'Line 45: Consider refactoring for readability',
+        'Line 87: Missing JSDoc comment'
+      ];
+      document.getElementById('analysisOutput').textContent = feedback.join('\n');
+    }
+
+    simulateAIResponse();
+    runAnalysis();
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/jszip"></script>
   <script src="https://cdn.jsdelivr.net/npm/localforage"></script>
   <script src="path/to/webllm.js"></script>
